Failing tests

Bug: 786840
Change-Id: Id562836b79bbc494e6f44e8492f8b36b704a2838