ui/gfx/render_text_unittest.cc
@@ -3743,26 +3743,22 @@ TEST_P(RenderTextHarfBuzzTest, HarfBuzz_SubglyphGraphemePartition) {
     Range bounds[4];
     bool is_rtl;
   } cases[] = {
-    { // From string "A B C D" to glyphs "a bcd".
-      { 0, 1 },
-      { Range(0, 10), Range(10, 13), Range(13, 17), Range(17, 20) },
-      false
-    },
-    { // From string "A B C D" to glyphs "ab cd".
-      { 0, 2 },
-      { Range(0, 5), Range(5, 10), Range(10, 15), Range(15, 20) },
-      false
-    },
-    { // From string "A B C D" to glyphs "dcb a".
-      { 1, 0 },
-      { Range(10, 20), Range(7, 10), Range(3, 7), Range(0, 3) },
-      true
-    },
-    { // From string "A B C D" to glyphs "dc ba".
-      { 2, 0 },
-      { Range(15, 20), Range(10, 15), Range(5, 10), Range(0, 5) },
-      true
-    },
+      {// From string "A B C D" to glyphs "a bcd".
+       {0, 1},
+       {Range(0, 10), Range(10, 13), Range(13, 17), Range(17, 20)},
+       false},
+      {// From string "A B C D" to glyphs "ab cd".
+       {0, 2},
+       {Range(0, 5), Range(5, 10), Range(10, 15), Range(15, 20)},
+       false},
+      {// From string "A B C D" to glyphs "dcb a"
+       {1, 0},
+       {Range(10, 20), Range(7, 10), Range(3, 7), Range(0, 3)},
+       true},
+      {// From string "A B C D" to glyphs "dc ba".
+       {2, 0},
+       {Range(15, 20), Range(10, 15), Range(5, 10), Range(0, 5)},
+       true},
   };
 
   internal::TextRunHarfBuzz run((Font()));
@@ -3926,6 +3922,113 @@ TEST_P(RenderTextHarfBuzzTest, HarfBuzz_BreakRunsByEmoji) {
   EXPECT_EQ(ToString16Vec({"x", "😁", "y", "✨"}), GetRunListStrings());
   // U+1F601 is represented as a surrogate pair in UTF-16.
   EXPECT_EQ("[0][1->2][3][4]", GetRunListStructureString());
+}
+
+TEST_P(RenderTextHarfBuzzTest, HarfBuzz_BreakRunsByEmojiVariationSelectors) {
+  constexpr int kGlyphWidth = 30;
+  SetGlyphWidth(30);
+  RenderTextHarfBuzz* render_text = GetRenderTextHarfBuzz();
+
+  // ☎ (U+260E BLACK TELEPHONE) and U+FE0F (a variation selector) combine to
+  // form (on some platforms), ☎️, a red (or blue) telephone. The run can
+  // not break between the codepoints, or the incorrect glyph will be chosen.
+  render_text->SetText(WideToUTF16(L"x\u260E\uFE0Fy"));
+  render_text->SetDisplayRect(Rect(1000, 1000));
+  test_api()->EnsureLayout();
+  EXPECT_EQ(ToString16Vec({"x", "☎\uFE0F", "y"}), GetRunListStrings());
+  EXPECT_EQ("[0][1->2][3]", GetRunListStructureString());
+
+  // Also test moving the cursor across the telephone.
+  EXPECT_EQ(gfx::Range(0, 0), render_text->selection());
+  EXPECT_EQ(0, render_text->GetUpdatedCursorBounds().x());
+  render_text->MoveCursor(CHARACTER_BREAK, CURSOR_RIGHT, SELECTION_NONE);
+  EXPECT_EQ(gfx::Range(1, 1), render_text->selection());
+  EXPECT_EQ(1 * kGlyphWidth, render_text->GetUpdatedCursorBounds().x());
+
+  // Jump over the telephone: two codepoints, but a single glyph.
+  render_text->MoveCursor(CHARACTER_BREAK, CURSOR_RIGHT, SELECTION_NONE);
+  EXPECT_EQ(gfx::Range(3, 3), render_text->selection());
+  EXPECT_EQ(2 * kGlyphWidth, render_text->GetUpdatedCursorBounds().x());
+
+  render_text->MoveCursor(CHARACTER_BREAK, CURSOR_RIGHT, SELECTION_NONE);
+  EXPECT_EQ(gfx::Range(4, 4), render_text->selection());
+  EXPECT_EQ(3 * kGlyphWidth, render_text->GetUpdatedCursorBounds().x());
+
+  // Nothing else.
+  render_text->MoveCursor(CHARACTER_BREAK, CURSOR_RIGHT, SELECTION_NONE);
+  EXPECT_EQ(gfx::Range(4, 4), render_text->selection());
+  EXPECT_EQ(3 * kGlyphWidth, render_text->GetUpdatedCursorBounds().x());
+}
+
+TEST_P(RenderTextHarfBuzzTest, HarfBuzz_OrphanedVariationSelector) {
+  SetGlyphWidth(30);
+  RenderTextHarfBuzz* render_text = GetRenderTextHarfBuzz();
+
+  // It should never happen in normal usage, but a variation selector can appear
+  // by itself. In this case, it can form its own text run, with no glyphs.
+  render_text->SetText(WideToUTF16(L"\uFE0F"));
+  test_api()->EnsureLayout();
+  EXPECT_EQ(ToString16Vec({"\uFE0F"}), GetRunListStrings());
+  EXPECT_EQ("[0]", GetRunListStructureString());
+
+  EXPECT_EQ(gfx::Range(0, 0), render_text->selection());
+
+  // Is -1 right here?
+  EXPECT_EQ(-1, render_text->GetUpdatedCursorBounds().x());
+
+  render_text->MoveCursor(CHARACTER_BREAK, CURSOR_RIGHT, SELECTION_NONE);
+  EXPECT_EQ(gfx::Range(1, 1), render_text->selection());
+  EXPECT_EQ(0, render_text->GetUpdatedCursorBounds().x());
+
+  // Nothing else.
+  render_text->MoveCursor(CHARACTER_BREAK, CURSOR_RIGHT, SELECTION_NONE);
+  EXPECT_EQ(gfx::Range(1, 1), render_text->selection());
+  EXPECT_EQ(-1, render_text->GetUpdatedCursorBounds().x());
+}
+
+TEST_P(RenderTextHarfBuzzTest, HarfBuzz_AsciiVariationSelector) {
+  RenderTextHarfBuzz* render_text = GetRenderTextHarfBuzz();
+
+  // A variation selector doesn't have to appear with Emoji. It will probably
+  // cause the typesetter to render tofu in this case, but it should not break
+  // a text run,
+  render_text->SetText(WideToUTF16(L"x\uFE0Fy"));
+  test_api()->EnsureLayout();
+  EXPECT_EQ(ToString16Vec({"x\uFE0Fy"}), GetRunListStrings());
+  EXPECT_EQ("[0->2]", GetRunListStructureString());
+}
+
+TEST_P(RenderTextHarfBuzzTest, HarfBuzz_LeadingVariationSelector) {
+  RenderTextHarfBuzz* render_text = GetRenderTextHarfBuzz();
+
+  // When a variation selector appears either side of an emoji, ensure the one
+  // after is in the same run.
+  render_text->SetText(WideToUTF16(L"\uFE0F\u260E\uFE0Fy"));
+  test_api()->EnsureLayout();
+  EXPECT_EQ(ToString16Vec({"\uFE0F", "☎\uFE0F", "y"}), GetRunListStrings());
+  EXPECT_EQ("[0][1->2][3]", GetRunListStructureString());
+}
+
+TEST_P(RenderTextHarfBuzzTest, HarfBuzz_TrailingVariationSelector) {
+  RenderTextHarfBuzz* render_text = GetRenderTextHarfBuzz();
+
+  // If a redundant variation selector appears in an emoji run, it also gets
+  // merged into the emoji run.
+  render_text->SetText(WideToUTF16(L"x\u260E\uFE0F\uFE0Fy"));
+  test_api()->EnsureLayout();
+  EXPECT_EQ(ToString16Vec({"x", "☎\uFE0F\uFE0F", "y"}), GetRunListStrings());
+  EXPECT_EQ("[0][1->3][4]", GetRunListStructureString());
+}
+
+TEST_P(RenderTextHarfBuzzTest, HarfBuzz_MultipleVariationSelectorEmoji) {
+  RenderTextHarfBuzz* render_text = GetRenderTextHarfBuzz();
+
+  // Two emoji with variation selectors appearing in a correct sequence should
+  // be in the same run.
+  render_text->SetText(WideToUTF16(L"x\u260E\uFE0F\u260E\uFE0Fy"));
+  test_api()->EnsureLayout();
+  EXPECT_EQ(ToString16Vec({"x", "☎\uFE0F☎\uFE0F", "y"}), GetRunListStrings());
+  EXPECT_EQ("[0][1->4][5]", GetRunListStructureString());
 }
 
 TEST_P(RenderTextHarfBuzzTest, HarfBuzz_BreakRunsByAscii) {
